<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	>
	<data>
		<variable
			name="fragment"
			type="id.ac.polinema.skor.fragments.GoalFragment" />

		<variable
			name="goalScorer"
			type="id.ac.polinema.skor.models.GoalScorer" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".fragments.GoalFragment">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.25" />

		<TextView
			android:id="@+id/textView6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Name"
			app:layout_constraintEnd_toStartOf="@+id/guideline2"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Minute"
			app:layout_constraintEnd_toStartOf="@+id/guideline2"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/input_name" />

		<EditText
			android:id="@+id/input_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPersonName"
			android:text="@={goalScorer.name}"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guideline2"
			app:layout_constraintTop_toTopOf="parent" />

		<EditText
			android:id="@+id/input_minute"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="numberSigned"
			android:text="@={``+ goalScorer.minute}"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guideline2"
			app:layout_constraintTop_toBottomOf="@+id/input_name" />

		<Button
			android:id="@+id/button_save"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:text="Save"
			android:onClick="@{(v) -> fragment.onSaveClicked(v)}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guideline3" />

		<Button
			android:id="@+id/button_cancel"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:text="Cancel"
			android:onClick="@{(v) -> fragment.onCancelClicked(v)}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/guideline3"
			app:layout_constraintStart_toStartOf="parent" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.5" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
